Style.css
.entryfield { display:block; float:left; position:relative; }
.entryfield input {  float:left; position:relative; }
.entryfield label { float:left; width:180px; text-align:right; padding-right:8px; }
.entryfield .optionblock {display: block; float: left; padding-right: 4px; }
.entryfield input.option  {width:15px;  }

.statusmessage {width:950px;  display:block; float:left; color: #FF2200; clear:right; font-size:18pt; }

.titlebar{
	text-align: center;
	height:80px;
	color: #e4e5b5;
	background-color: #134242;
}
.leftnavigation{
	background-image: url(images/sidenav.gif);
	display:block; 
	float: left;
	width:160px;
	height:320px;
	min-height:320px;
	padding: 10px 0px 0px 0px; 
}

.centerblock{
	width:100%;
	display:block; 
	float: left;
}

.content{
	display:block;
	clear:none;
	margin: 30px 30px 10px 170px;
}

.contentIE{
	display:block;
	clear:none;
	margin: 0px -120px 0px 290px;
}


.footer{
	text-align: center;
	line-height:16px;
	display:block; 
	float: right;		
	width:100%; 	
	height:115px;
}

.leftnavigation a {
	display: block; 
	text-align: left; 
	font: bold 14px sans-serif; 
	padding: 5px 0px 5px 10px; 
	margin: 0px 0px 0px 0px; 
	border-width: 0px; 
	text-decoration: none; 
	color: #134242;
}
.leftnavigation a:hover {color: blue;}
.leftnavigation a#selected {color: #134242; background: url(images/back.gif); background-color: #e4e5b5;}

.admintitlebar{
	text-align: center;
	background-color: red;
	height:80px;
	min-height:80px;
	color: #e4e5b5;
}
.requestTypeHeader {
	text-align: left; 
	font: bold 14px sans-serif; 
	padding: 5px 0px 5px 10px; 
	margin: 0px 0px 0px 0px; 
	border-width: 0px; 
	text-decoration: none; 
}




/*
label{
	width: 200px;
	float: left;
	text-align: right;
	margin-right: 0.5em;
	margin: 0px 10px 0px 0px;
	display: block;
}
*/

input.btn{
	background-color: #134242;
	color: #FFFFFF;
}

input.date{
	width: 70px;
}

input.select {
	width: 20px;
}

/*
input.option {
	width: 12px;
	background-color:green;
	padding: 0px 70px 10px 50px;
}
*/

.orderListNames input{
	width: 12px;
	height: 12px;
}
	
label.option {
	width: 18px;
}

label.required {
	color: red;
}

.floatleft{
	float: left; 
	border-style:solid;
	border-width:thin;
	padding: 10px 10px 10px 10px;
	margin: 0px 20px 10px 10px;
}
img.floatright{
	float: right; 
	border-style:solid;
	border-width:thin;
	padding: 10px 10px 10px 10px;
	margin: 0px 20px 10px 10px;
}
img.centered{
	padding: 0px 30px 10px 50px;
	display: block;
    margin-left: auto;
    margin-right: auto;
}

textarea {
/*	background-color: #EBF1FA;*/
	background-color: #FFFFFF;
	width: 350px;
	height: 75px;
}

.largearea textarea {
/*	background-color: #EBF1FA;*/
	background-color: #FFFFFF;
	width: 650px;
	height: 125px;
}

.toolbar{
	float: left;
	width: 140px;
/*	height: 430px;*/
	background-color: #dbdbc0;
}
   html,body{
	background-color: #e4e5b5;
	margin: -20px 0 0 0;
	background: url(images/back.gif); 
	margin:0;
	padding:0;
	height:100%;
	border:none
}

div#cataloglist{
	text-align:center;	
	font-size:24px;
}
div#cataloglist a {
	color: #134242;
	text-decoration: none; 
	font-weight: bold; 
	font-size:18px;
	line-height: 26pt;
}

div#mainbody{
/*	width:100%;
	height:100%;
*/	margin: 0px 0px 0px 0px;
	background-color: #dbdbc0;
}

.orderListNames{
	display:block; 
	width:270px; 
    font-size:14px;
	left:0px; 
	position: relative; 
	float:left; 
	text-align: left; 
	font-weight: bold; 
	line-height: 22px;
}

.orderListEmails{
	display:block; 
	width:220px; 
    font-size:14px;
	left:0px; 
	position: relative; 
	float:left; 
	text-align: left; 
	font-style: italic;
	line-height: 22px;
}

.orderListNames a{
	text-decoration: none;
}

div.catalogblocklist{
	display:block; 
	padding: 15px 10px 20px 10px; 
	margin-left:10px;
	float:left; 
	text-align: left;
}
div.catalogblockdetail{
	display:block; 
	padding: 15px 100px 20px 10px; 
	position: relative; 
	float:left; 
	text-align: left;	
}
div.catalogblockdetaillist a{
	text-decoration: none; 
}
div.catalogblockdetaillist{
	font-size:18px;
	float:left; 
}
	
.adminOrderType{
    font-size:18px;
	text-align: center; 
	font-weight: bold; 
}
.adminOrderType a {
	text-decoration: none; 
}

span.cap-g {
  float: left; 
  font-size: 1.5em;
  padding: 0 0.05em;
  margin: 0 0.15em 0 0; 
/*  background: #90ee90;*/
  background: #e4e5b5;
  color:#134242;
  border: 3px outset #2e8b57;
	font-style: italic;
	font-weight: bold; 
}

#PartList{
	float: left;
	display: block;
}


#PartList br{
	clear: left;
}

#PartList .PartCode	{width: 120px;  text-align: left;   float: left; display: block; }
#PartList .Price			{width: 80px;  text-align: right; float: left; display: block; }

#PartList input			{width: 70px;  padding-left: 10px; text-align: right; float: left; display: block; }



#toDoList span.done{ text-decoration: line-through; }

#EmailSearch 
{
	float: left;
	display: block;
	width:300px; 
}
#EmailSearch label { width:120px; float:left; clear: left; padding-right: 10px; }
#EmailSearch input { width:120px; padding-left: 5px; }

#EmailList  { width:810px; display: block; float: left;	padding-top: 20px; }
#EmailList a { width:330px; display: block; float: left;}
#EmailList .subject { width:320px; display: block; float: left; }
#EmailList .date { width:110px; display: block; float: left;}

#EmailDetailView { width:810px; display: block; float: left;	padding-top: 20px; }

#OrdersSearch { width:390px; display: block; float: left; }
/*
#OrdersSearch .entryfield label {width:110px;  }
#OrdersSearch .entryfield input {width:110px;  }
*/
#OrdersSearch input.btn{ width:210px; display: block; float: left;}

#RequestList  { width:520px;  display: block; float: left;}
#RequestList #comment {  width:260px; height:60px;  display: block; float: left; }
#RequestList input.btn { display: block;  clear: left;  width:300px; }
#RequestList .entryfield label {width:200px;  }
#RequestList .entryfield input {width:250px;  }
#RequestList textarea { display: block; float: left; width:250px; }
/* ... */

